# DueDiligence

./: .gitignore  LICENSE  Plan.canvas  README.md  pyproject.toml  requirements.txt
dd/: __main__.py  environment.py
dd/api/: main.py  model.py
dd/data/: main.py
dd/sheets/: main.py
dd/webapp/: main.py
