[tool.poetry]
name = "duediligence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
loguru = "^0.7.0"
pandas = "^2.0.3"
python-dotenv = "^1.0.0"
canvasapi = "^3.2.0"
tabulate = "^0.9.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
